@@ -1,7 +1,11 @@
 Revision history for Perl distribution Mojo-SAML
 
 0.05
-  - Add Mojo::SAML::Entity class
+  - Add Mojo::SAML::Entity class from IdP class
+  - IdP class now inherits from Entity class
+  - Add "from" method to Entity class
+  - Add "role" method to Entity class
+  - Add "role_type" attribte to Entity class
 
 0.04 2018-05-14
   - Bugfix calling isa on non-references
